sample/asm/invalid_operand_types/idiv.asm
.function: main/1
    fstore 1 1.0
    strstore 2 "Hello World!"
    idiv 3 2 1

    izero 0
    return
.end
